force-app/main/default/objects/MOD_Registration__c/MOD_Registration__c.object-meta.xml
<CustomObject>
    <label>MOD Registration</label>
    <nameField>
        <displayFormat>MOD-{0000}</displayFormat>
        <label>MOD Registeration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MOD Registration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>