force-app/main/default/objects/MOD_Registration__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipName>MOD_Registerations</relationshipName>
    <type>Lookup</type>
</CustomField>