force-app/main/default/objects/MOD_Registration__c/fields/Customer_for_Collection_A__c.field-meta.xml
<CustomField>
    <fullName>Customer_for_Collection_A__c</fullName>
    <label>Customer for Collection (A)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>