force-app/main/default/objects/MOD_Registration__c/fields/Mobile_Number_of_A__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number_of_A__c</fullName>
    <label>Mobile Number of A</label>
    <length>10</length>
    <type>Text</type>
</CustomField>