force-app/main/default/objects/MOD_Registration__c/fields/MOD_Amount__c.field-meta.xml
<CustomField>
    <fullName>MOD_Amount__c</fullName>
    <label>MOD Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>