force-app/main/default/objects/MOD_Registration__c/fields/MOD_Commitment_Date__c.field-meta.xml
<CustomField>
    <fullName>MOD_Commitment_Date__c</fullName>
    <label>MOD Commitment Date</label>
    <type>Date</type>
</CustomField>