force-app/main/default/objects/MOD_Registration__c/fields/MOD_Done__c.field-meta.xml
<CustomField>
    <fullName>MOD_Done__c</fullName>
    <label>MOD Done</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>