force-app/main/default/objects/MOD_Registration__c/fields/Sourcing_BM__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_BM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing BM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MOD_Registration1</relationshipName>
    <type>Lookup</type>
</CustomField>