force-app/main/default/objects/MOD_Registration__c/fields/Sourcing_Officer__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MOD_Registration</relationshipName>
    <type>Lookup</type>
</CustomField>